Fixed the bug related to message that was not showing of there was no owned book

--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -29,7 +29,7 @@ textarea.form-control {
   padding-left: 28px;
 }
 
-.alert {
+.form-modal .alert {
   display: none;
 }
 
